<resources>
    <string name="app_name">모비트</string>
    <string name="intro_title">MOBIT</string>
    <string name="intro_description">가장 신뢰받을 가상화폐 모의투자</string>
    <string name="toast_msg_error_001">예기치 못한 오류가 발생했습니다. 잠시 후에 다시 시도해 주세요.</string>
    <string name="tab_home">거래소</string>
    <string name="tab_investment">투자내역</string>
    <string name="tab_cash">입출금</string>
    <string name="tab_profile">내정보</string>
    <string name="menu_coinlist">코인목록</string>
    <string name="menu_chart">차트</string>
    <string name="menu_trade">매수/매도</string>
    <string name="menu_investment">투자내역</string>
    <string name="menu_setting">설정</string>
    <string name="network_connection_need">네트워크 연결이 필요합니다.\n네트워크 연결 후에 다시 실행해주세요.</string>
    <string name="coin_list_title">코인목록</string>
    <string name="coin_list_search_default">코인명 검색</string>
    <string name="coin_list_KRW">KRW</string>
    <string name="coin_list_favorite">관심</string>
    <string name="coin_name">코인명</string>
    <string name="coin_price">현재가</string>
    <string name="coin_diff">전일대비</string>
    <string name="coin_transaction_payment">거래대금</string>
    <string name="coin_list_eng_coin_name_string">%1$s/KRW</string>
    <string name="coin_list_change_rate_string">%1$s%%</string>
    <string name="coin_list_total_trade_price_string">%1$s백만</string>
    <string name="showChart">차트보기</string>
    <string name="doTrade">매수/매도</string>
    <string name="investment_title">투자내역</string>
    <string name="investment_tab1">보유코인</string>
    <string name="investment_tab2">거래내역</string>
    <string name="asset_title">내 보유자산</string>
    <string name="asset_KRW">보유KRW</string>
    <string name="asset_total">총 보유자산</string>
    <string name="asset_total_buy">총매수</string>
    <string name="asset_total_evaluation">총평가</string>
    <string name="asset_gain_and_loss">평가손익</string>
    <string name="asset_yield">수익률</string>
    <string name="asset_no_data">--</string>
    <string name="asset_no_coin">현재 보유 중인 코인이 없습니다.</string>
    <string name="asset_no_transaction">거래내역이 없습니다.</string>
    <string name="asset_retained_number">보유수량</string>
    <string name="asset_average_price">매수평균가</string>
    <string name="asset_evaluation">평가금액</string>
    <string name="asset_buy_price">매수금액</string>
    <string name="asset_portfolio_title">보유자산 포트폴리오</string>
    <string name="asset_percent">보유 비중\n(%)</string>
    <string name="asset_yield_string">%1$s%%</string>
    <string name="asset_code_string">(%1$s)</string>
    <string name="asset_price_string">%1$s KRW</string>
    <string name="asset_two_string">%1$s %2$s</string>
    <string name="transaction_buy">매수</string>
    <string name="transaction_sell">매도</string>
    <string name="transaction_info">정보</string>
    <string name="transaction_can_order">주문가능</string>
    <string name="transaction_order_count">수량</string>
    <string name="transaction_order_price">가격</string>
    <string name="transaction_order_total_price">총액</string>
    <string name="transaction_order_reset">초기화</string>
    <string name="transaction_order_minimum_price1">최소주문금액</string>
    <string name="transaction_order_minimum_price2">5,000 KRW</string>
    <string name="transaction_order_fee1">수수료</string>
    <string name="transaction_order_fee2">0.05%</string>
    <string name="transaction_krw_string">%1$s KRW</string>
    <string name="transaction_coin_string">%1$s %2$s</string>
    <string name="transaction_price_rate_string">%1$s%%</string>
    <string name="BTC">최초발행: 2009년 1월\n블록 생성주기: 10분\n총 발행한도: 21,000,000\n합의 프로토콜: PoW\n\n코인 소개\n비트코인은 최초로 구현된 디지털 자산입니다. 발행 및 유통을 관리하는 중앙권력이나 중간상인 없이, P2P 네트워크 기술을 이용하여 네트워크에 참여하는 사용자들이 주체적으로 화폐를 발행하고 이체내용을 공동으로 관리합니다. 이를 가능하게 한 블록체인 기술을 처음으로 코인에 도입한 것이 바로 비트코인입니다.\n비트코인을 사용하는 개인과 사업자의 수는 꾸준히 증가하고 있으며, 여기에는 식당, 아파트, 법률사무소, 온라인 서비스를 비롯한 소매상들이 포함됩니다. 비트코인은 새로운 사회 현상이지만 아주 빠르게 성장하고 있습니다. 이를 바탕으로 가치 증대는 물론, 매일 수백만 달러의 비트코인이 교환되고 있습니다.\n비트코인은 디지털 자산 시장에서 현재 유통시가총액과 코인의 가치가 가장 크고, 거래량 또한 안정적입니다. 이더리움이 빠르게 추격하고 있지만 아직은 가장 견고한 디지털 자산 이라고 볼 수 있습니다.\n\n코인 특징\n1. 중앙주체 없이 사용자들에 의해 거래내용이 관리될 수 있는 비트코인의 운영 시스템은 블록체인 기술에서 기인합니다. 블록체인은 쉽게 말해 다 같이 장부를 공유하고, 항상 서로의 컴퓨터에 있는 장부 파일을 비교함으로써 같은 내용만 인정하는 방식으로 운영됩니다. 따라서 전통적인 금융기관에서 장부에 대한 접근을 튼튼하게 방어하던 것과는 정반대의 작업을 통해 보안을 달성합니다. 장부를 해킹하려면 51%의 장부를 동시에 조작해야 하는데, 이는 사실상 불가능합니다. 왜냐하면, 이를 실행하기 위해서는 컴퓨팅 파워가 어마어마하게 소요되고, 이것이 가능한 슈퍼컴퓨터는 세상에 존재하지 않기 때문입니다. 또한, 장부의 자료들은 줄글로 기록되는 것이 아니라 암호화 해시 함수형태로 블록에 저장되고, 이 블록들은 서로 연결되어 있어서 더 강력한 보안을 제공합니다.\n2. 비트코인은 블록발행보상을 채굴자에게 지급하는 방식으로 신규 코인을 발행합니다. 블록발행보상은 매 21만 블록(약 4년)을 기준으로 발행량이 절반으로 줄어듭니다. 처음에는 50비트코인씩 발행이 되었고, 4년마다 계속 반으로 감소하고 있습니다. 코인의 총량이 2,100만 개에 도달하면 신규 발행은 종료되고, 이후에는 거래 수수료만을 통해 시스템이 지탱될 것입니다.\n\n핵심 가치\n1. 다양한 알트코인들의 등장에 앞서 비트코인은 디지털 자산 시장에서 독보적이었기 때문에, 현재 가장 보편적인 결제수단으로 사용됩니다. 실생활에서 이를 활용할 수 있는 가맹점이 알트코인들보다 압도적으로 많을 뿐만 아니라, 이 또한 증가하고 있습니다. 일례로 일본 업체들이 비트코인 결제 시스템을 도입하면서 곧 비트코인을 오프라인 점포 26만 곳에서 이용할 수 있게 될 것입니다.\n2. 여러 나라에서 비트코인을 정식 결제 수단으로 인정하면서, 실물화폐와 디지털 자산을 거래할 때 더는 부가가치세가 부과되지 않게 된다고 합니다. 실제로 일본과 호주에서는 이미 비트코인을 합법적 결제 수단으로 인정하면서 제도권 안으로 들여오고 있고, 미국에서는 비트코인 ETF 승인 노력도 진행되고 있습니다. 각국에 비트코인을 기반으로 한 ATM 기계도 설치되었다고 합니다.</string>
    <string name="ETH">최초발행: 2015년 7월\n블록 생성주기: 약 12초\n총 발행한도: 제한없음\n채굴 보상량: 5ETH\n합의 프로토콜: PoW(PoS 전환계획)\n\n코인 소개\n이더리움은 블록체인에 기초해 다양한 앱 개발을 지원하는 플랫폼이며, 여기서 사용되는 디지털 자산 또한 같은 이름으로 통용됩니다.\n1. 플랫폼: 이더리움은 블록체인을 활용한 모든 것을 프로그래밍할 수 있는 플랫폼입니다. 거래 기록뿐만 아니라 탈중앙화 앱(DAPP)들을 투명하게 운영할 수 있는 확장성을 제공합니다. 플랫폼은 프로그램된 계약을 정확히 실행하도록 설계된 스마트 컨트랙트를 기반으로 운영됩니다.\n2. 화폐: 이더리움 플랫폼에서 이용되는 디지털 자산으로, DAPP을 만드는 개발자들과 스마트 컨트랙트를 이용하고자 하는 사용자들이 필요로 합니다.\n현재 디지털 자산 시가총액 기준, 비트코인 다음으로 독보적인 위치에 있습니다. 디지털 분야에서 가장 혁명적인 기술 중 하나로 평가받는 분위기이며, 실제 \'월드테크놀로지(The WTN) IT S/W\' 부문에서 경쟁작인 마크 저커버그의 페이스북을 제치고 수상을 한 바 있습니다.\n\n코인 특징\n1. 이더리움에서는 다양한 애플리케이션들을 구동시킬 수 있는데, 이런 DAPP들은 금융, 공유경제, SNS, 그리고 탈중앙화 자율 조직(DAO)까지 확장될 수 있습니다. 대표적으로 분산화된 예측시장을 제공하는 노시스(GNO)와 어거(AUG), 분산화된 크라우드펀딩 플랫폼인 웨이펀드(WeiFund), 사물인터넷과 스마트 자산을 위한 액세스 프로토콜인 에어로크(Airlock) 등이 있습니다.\n2. 비트코인의 제한된 명령어와 달리 다양한 수준의 응용을 지원하기 위해 Python과 유사한 구조의 Serpent, C++과 유사한 Solidity, Lisp과 유사한 LLL 등의 튜링 완전언어를 통해 스마트 컨트랙트 코딩을 지원합니다. 사용자들은 이와 같은 프로그래밍 언어를 사용해 컨트랙트와 DAPP를 만들 수 있습니다.\n3. 발행 한도는 존재하지 않지만, 1년에 발행할 수 있는 코인은 1,800만 개로 제한되어 있습니다. 코인의 발행은 일정하지 않은데, 이는 인플레이션을 고려해 채굴 난이도 알고리즘에 변화를 주기 때문입니다. 이는 블록 주기를 조정하는 역할을 하며, 기본적으로 정해져 있는 알고리즘 공식과 상호작용해 발행량을 유동적으로 조절합니다. (기본적인 인플레이션 공식은 블록마다 5이더가 발행되고, 엉클에게도 일부 신규 코인이 추가 발행된다는 것입니다.)\n\n활용 분야\n1. 스마트 컨트랙트: 컴퓨터 언어인 실행 코드로 작성되기 때문에, 특정 조건이 달성되면 자동으로 프로그램이 실행되어 계약이 이행됩니다. 강제로 계약이 이행되므로 상대를 신뢰할 수 없는 경우에서 강력한 힘을 발휘할 수 있습니다. 따라서 시스템 오류, 사기, 제3자의 간섭 가능성을 제거할 수 있습니다.\n2. DAPP을 통한 이더리움 플랫폼의 확장성: 이더리움의 경우, 화폐 자체보다 네트워크 플랫폼이 더 큰 의미가 있습니다. 분산화된 DAPP과 스마트 컨트랙트, 그리고 사물 인터넷(IoT)을 접목한 기술은 향후 인간의 개입을 완전히 배제한 기계 간 금융거래도 까지도 가능하게 할 것이라고 합니다. 100개가 넘는 코인들이 이더리움 플랫폼 위에서 운영되고 있는 것으로 볼 때, 이것의 확장성을 짐작할 수 있습니다.</string>
    <string name="ADA">최초발행: 2017년 10월 1일\n총 발행한도: 45,000,000,000\n합의 프로토콜: Ouroboros\n\n코인 소개\n에이다는 금융,다양한 분야에 응용 프로그램을 실행할 수 있는 블록체인 응용 플랫폼이자 하스켈 프로그래밍 언어로 구축된 최초의 3세대 블록체인 디지털 자산입니다.\n1세대 블록체인인 비트코인은 화폐로서 기능에만 충실한 코인이며, 여기에 계약서 작성 등의 추가적인 기능을 더한 것이 2세대인 이더리움입니다. 에이다는 여기서 한 발 더 나아가 헌법을 정하여 해당 틀 안에서 변화를 인정하는 수단을 가능하게 했습니다.\n즉 에이다 소유자는 프로토콜 변경 방법, 이해 관계자 의도를 파악하는 방법, 파편화 가능성을 줄이는 방법 등에 투표할 수 있습니다. 이렇게 도출된 합의는 하드포크가 아닌 소프트포크를 통해 이뤄집니다. 즉, 에이다 소유자 의견을 수렴한 투표결과를 소프트포크로 구현하여 민주적인 변화를 이끌어내는 블록체인입니다.\n에이다는 Ouroboros라는 안전성이 입증된 Stake 프로토콜을 적용하였으며 매우 복잡하며 안전한 하스켈 프로그래밍 언어로 구축되어 향후 양자컴퓨터가 개발되더라도 해킹에서 매우 안전하도록 설계되었습니다.\n\n코인 특징\n1. 카르다노는 우로보로스(Ouroboros) 지분증명(PoS) 알고리즘을 사용합니다. 안전성이 높은 것으로 평가받는 함수형 언어 하스켈(Haskell) 기반입니다. 이에 보안성을 갖춘 것은 물론, 확정성이 뛰어나 많은 이용자가 사용할 수 있습니다. 우로보로스는 지분증명 방식의 장점을 유지하면서, 소수에 의한 지분 독점을 막기 위해 임의로 대표를 선출합니다.\n2. 기능 개선이 필요한 경우 하드포크가 아닌, 오로지 소프트포크를 통해 업그레이드합니다. 프로토콜의 지속가능성을 보장하는 재무 시스템과 효율성·확장성을 염두한 에코시스템이 설계되어 있습니다.\n3. 카르다노의 디지털자산인 에이다를 보유·전송하려면 다이달로스 지갑(Daedalus Wallet)을 통해야 합니다. 이 지갑은 암호화된 개인키 및 비밀번호를 사용하여 멀웨어(malware) 같은 보안 위협으로부터 지갑을 보호하며, 페이퍼 인증서가 가능해 콜드월렛에 넣을 수 있는 보안 옵션을 제공합니다.\n4. 카르다노는 모바일에 최적화된 플랫폼입니다. 모바일기기가 하나의 네트워크 노드가 되어 로컬에 필요한 파일 서버나 데이터베이스를 저장할 수 있다. 또한 블록체인상에서 파일 위변조에 대한 자동 검증이 이루어집니다.</string>
    <string name="DOGE">최초발행: 2013년 12월\n블록 생성주기: 1분\n총 발행한도: 제한없음\n채굴 보상량: 10,000DOGE\n합의 프로토콜: PoW\n\n코인 소개\n처음에 "joke currency"라고 불리기도 하면서 장난처럼 시작한 도지코인은 일본 개인 시바 이누를 마스코트로 사용합니다. 이 시바견은 인터넷에서 재미로 사용되던 그림이며, 같은 그림이 코인의 로고로 이용되고 있습니다. 이를 통해 도지코인이 재밌고 친근한 디지털자산이라는 점을 강조합니다. 실제로 당장 홈페이지만 접속해도, 아주 쉽게 도지코인 지갑을 설치할 수 있습니다.\n\n코인 특징\n1. 도지코인은 라이트코인에서 포크된 럭키코인에서 포크되었습니다. 그래서 처음에는 럭키코인처럼 채굴보상이 랜덤이었는데, 이후 정해진 보상으로 정책을 바꿨습니다.\n2. 도지코인은 빠른 코인 생산 속도를 가지고 있습니다. 처음에는 생산량이 1,000억 개로 고정돼있었는데, 무제한 생산으로 바뀌었습니다. 현재 10,000개의 코인이 1분마다 생겨나는 중이고, 1년에는 52억 개의 새로운 도지코인이 생겨납니다. 2015년 6월 30일 1,000억 개의 코인이 이미 생산되었습니다.\n3. 도지코인은 SNS에서 팁을 줄 수 있는 시스템을 통해 인기를 얻었습니다. 즉, 도지코인을 이용해 사용자들이 흥미롭거나 가치 있는 콘텐츠를 제공한 사람에게 팁을 주는 것입니다. 레딧, 트위터, 트위치티비(Twitch.TV)등에서 이런 서비스를 제공하는 도지팁봇(Dogetipbot)이 등장하기도 했으나 현재 사용 가능한 팁봇은 제한적입니다.</string>
    <string name="chart_unit_minute_1">1분</string>
    <string name="chart_unit_minute_3">3분</string>
    <string name="chart_unit_minute_5">5분</string>
    <string name="chart_unit_minute_10">10분</string>
    <string name="chart_unit_minute_30">30분</string>
    <string name="chart_unit_minute_60">60분</string>
    <string name="chart_unit_minute_240">240분</string>
    <string name="first_setting_title">Mobit</string>
    <string name="first_setting_deposit_title">예수금 설정</string>
    <string name="first_setting_deposit_info_1">모의투자에서 사용할 예수금을 입력하세요!</string>
    <string name="first_setting_deposit_info_2">예수금은 최소 0KRW부터 최대 2,000,000,000KRW까지 설정 가능합니다.</string>
    <string name="first_setting_deposit_input">예수금 입력</string>
    <string name="first_setting_guide_title">이용가이드</string>
    <string name="guide_info_1">Mobit는 가상화폐 거래소 업비트에서 제공하는 코인 정보를 활용하여 가상화폐 모의투자를 제공하고 있습니다.</string>
    <string name="guide_info_2">Mobit는 다음과 같은 기능들을 제공합니다!</string>
    <string name="guide_info_3">실시간 코인 가격 및 차트 제공</string>
    <string name="guide_info_3_1">현재는 업비트에서 원화로 거래되는 모든 코인에 대하여 서비스가 제공되며, 향후 업데이트에서 코인의 종류가 변경될 수 있습니다.</string>
    <string name="guide_info_4">실시간 코인 매수 및 매도</string>
    <string name="guide_info_4_1">현재가를 기준으로 코인 매수 및 매도가 가능합니다.</string>
    <string name="guide_info_5">보유자산 및 거래내역 확인</string>
    <string name="guide_info_5_1">현재 보유하고 있는 자산과 포트폴리오, 그리고 지금까지 거래했던 거래내역을 확인할 수 있습니다.</string>
    <string name="first_setting_close">설정완료</string>
    <string name="setting_title">설정</string>
    <string name="setting_guide">Mobit 이용가이드</string>
    <string name="setting_app_version_title">앱 버전</string>
    <string name="setting_app_version_info">1.4.14</string>
    <string name="setting_reset">초기화</string>
</resources>