<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/minute_1"
        android:title="@string/chart_unit_minute_1" />
    <item
        android:id="@+id/minute_3"
        android:title="@string/chart_unit_minute_3" />
    <item
        android:id="@+id/minute_5"
        android:title="@string/chart_unit_minute_5" />
    <item
        android:id="@+id/minute_10"
        android:title="@string/chart_unit_minute_10" />
    <item
        android:id="@+id/minute_30"
        android:title="@string/chart_unit_minute_30" />
    <item
        android:id="@+id/minute_60"
        android:title="@string/chart_unit_minute_60" />
    <item
        android:id="@+id/minute_240"
        android:title="@string/chart_unit_minute_240" />
</menu>