<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_coinlist"
        android:icon="@drawable/menu_coinlist_selector"
        android:title="@string/menu_coinlist" />

    <item
        android:id="@+id/menu_chart"
        android:icon="@drawable/menu_chart_selector"
        android:title="@string/menu_chart" />

    <item
        android:id="@+id/menu_transaction"
        android:icon="@drawable/menu_trade_selector"
        android:title="@string/menu_trade" />

    <item
        android:id="@+id/menu_investment"
        android:icon="@drawable/menu_investment_selector"
        android:title="@string/menu_investment" />

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/menu_setting_selector"
        android:title="@string/menu_setting" />
</menu>